--- a/WPF.Bootstrap/WPF.Bootstrap.nuspec
+++ b/WPF.Bootstrap/WPF.Bootstrap.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>Bootstrap.Wpf</id>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <title>Bootstrap.Wpf</title>
-    <authors>Fay.x</authors>
+    <authors>Felix.x</authors>
     <owners>flyingxu</owners>
-    <licenseUrl>https://github.com/flyingxu/WPF.Bootstrap/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/flyingxu/WPF.Bootstrap</projectUrl>
-    <iconUrl>https://github.com/flyingxu/WPF.Bootstrap/blob/master/WPF.Bootstrap/Bootstrap.WPF.png</iconUrl>
+    <licenseUrl>https://github.com/flyingxu/Bootstrap.WPF/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/flyingxu/Bootstrap.WPF</projectUrl>
+    <iconUrl>https://github.com/flyingxu/Bootstrap.WPF/blob/master/WPF.Bootstrap/Bootstrap.WPF.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>WPF theme and controls inspired by bootstrap UI</description>
-    <releaseNotes>Initial Release</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <releaseNotes>Use TabPanel alone as a navication control</releaseNotes>
+    <copyright>Copyright 2018</copyright>
     <tags>Wpf XAML bootstrap</tags>
   </metadata>
 </package>
