--- a/WPF.Bootstrap/WPF.Bootstrap.csproj
+++ b/WPF.Bootstrap/WPF.Bootstrap.csproj
@@ -100,7 +100,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\Default\TabPanel.xaml">
+    <Page Include="Themes\Default\TabNavi.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
