--- a/WPF.Bootstrap.Demo/WPF.Bootstrap.Demo.csproj
+++ b/WPF.Bootstrap.Demo/WPF.Bootstrap.Demo.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Views\TabNaviControl.xaml.cs">
       <DependentUpon>TabNaviControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TabPanelControl.xaml.cs">
+      <DependentUpon>TabPanelControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Text.xaml.cs">
       <DependentUpon>Text.xaml</DependentUpon>
     </Compile>
@@ -110,6 +113,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\TabNaviControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TabPanelControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
