--- a/WPF.Bootstrap/WPF.Bootstrap.csproj
+++ b/WPF.Bootstrap/WPF.Bootstrap.csproj
@@ -100,7 +100,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\Default\TabPanel.xaml">
+    <Page Include="Themes\Default\TabInPanel.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -117,6 +117,7 @@
     <Compile Include="Controls\Alert.cs" />
     <Compile Include="Controls\BootstrapPanel.cs" />
     <Compile Include="Controls\Dialog.cs" />
+    <Compile Include="Controls\TabInPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
